(feature): Adding the whatsapp
